test/cases/compile_errors/src_outside_function.zig
comptime {
    @src();
}

// error
// backend=stage2
// target=native
//
// :2:5: error: @src outside function
